2009-10-29:
===========

- Work on Moodle 1.9 integration. Made improvements to the Moodle extension for 
PaintWeb and fixed the imagesave19.php script.

2009-10-10:
===========

- Fixed issue #33 by adding a configuration file for the Makefile. Invoke make 
config.
- Added config-default.mk. Invoking make config adds config-local.mk which 
overwrites any variables from the default config.
- Updated the INSTALL file to include instructions on how to build PaintWeb.
- Made it easier to build PaintWeb by having only a single file to edit paths: 
the config-local.mk file. Until now you had to edit files in the scripts/ 
folder.
- Removed the make moodle target.
- Added the make moodle19 and moodle20 targets, as requested by the Moodle 
developers. The Moodle 2.0 package does not include 1.9-only scripts and 
vice-versa.
- Updated the README.

2009-10-07:
===========

- Using $CFG->libdir in Moodle integration code, as suggested by Martin 
Langhoff. Thanks!
- Fixed the PaintWeb icon in the TinyMCE plugin. Thanks to Mauno Korpelainen for 
his suggestion!

2009-09-11:
===========

- Another fix for the overlay button in the TinyMCE plugin. This time, the fix 
is for Webkit. Yesterday's change did include a regression in Webkit-based 
browsers: the overlay button was not showing up at all.

2009-09-10:
===========

- Made some improvements to the TinyMCE plugin, with regards to the overlay 
button.
- Worked around a problem which caused the overlay button to no longer show up 
in Opera 10 final. The Opera bug is related to losing image selection, due to 
the use of queryCommandState, DOM changes, and mouse events. See Opera bug 
DSK-265135 and TC: http://www.robodesign.ro/coding/0064/

2009-08-27:
===========

- Fixed a Text tool drawing bug which affected Gecko-based browsers. See 
https://bugzilla.mozilla.org/show_bug.cgi?id=478445

2009-08-26:
===========

- Fixed a performance regression on the OLPC XO. The new checkers background 