@@ -1,3 +1,9 @@
+2009-11-04:
+===========
+
+- Fixed a bug in the TinyMCE plugin. The overlay button did not always show in 
+the editor. This bug affected Moodle.
+
 2009-10-29:
 ===========
 
